--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -29,3 +29,13 @@
 @syntax-color-added: @green;
 @syntax-color-modified: @orange;
 @syntax-color-removed: @red;
+
+// ACMD colors
+@syntax-color-header: @blue;
+@syntax-color-section: @purple;
+@syntax-color-keyword-control: lighten(@purple, 10%);
+@syntax-color-function: @light-orange;
+@syntax-color-function-unknown: @syntax-color-function;
+@syntax-color-attribute-name: @light-blue;
+@syntax-color-variable-parameter-numeric-decmial: @red;
+@syntax-color-variable-parameter-numeric-hexadecimal: @cyan;
